--- a/index.html
+++ b/index.html
@@ -4,30 +4,51 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!--<link rel="stylesheet" href="css/style.css">-->
         <link rel="stylesheet" href="css/style.css">
+        <script src="js/script.js"></script>
         <title>Scryfall Random Sketch Commander Project</title>
     </head>
-    <body>        
+    <body>    
         <div class="header">
-            <h2>Scryfall Random Sketch Commander Project</h2>
+            <h2>Scryfall Random* Sketch Commander Project</h2>
+        </div>        
+        <div class="row">
+            <div class="cardprogress prevent-text-select">
+                <div class="cardprogressbar"></div>
+                <div class="cardprogresstext">Current Full Card Progress: 2%</div>
+            </div>
         </div>
         <div class="row">
             <div class="scrollnav">
                 <a class="currentpage" title="Main">Main</a>
                 <a class="navbutton" href="#" title="The Cards">The Cards</a>
-                <a class="navbutton" href="#" title="Option 3">Option 3</a>
-                <a class="navbutton" href="#" title="Option 4">Option 4</a>
+                <a class="navbutton" href="#" title="All Posts">All Posts</a>
+                <a class="navbutton" href="https://moxfield.com/decks/_qrcU7pkgE6lhgQCRw5YHg" target="blank" title="Moxfield List">Moxfield List</a>
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">
-                <div class="card">
-                    <h2>TITLE HEADING</h2>
-                    <h5>Title description, Dec 7, 2017</h5>
-                    <div class="fakeimg" style="height:200px;">Image</div>
-                    <p>Some text..</p>
+            <div class="leftcolumn">                
+                <div class="card post">
+                    <a href="posts/testpost.md">Test Post</a>
+                </div>
+                <div class="card post">
+                    <h2>AN INTRODUCTORY POST</h2>
+                    <h5>A "short "introduction, May 6, 2025</h5>
+                    <p>Hello! I've decided to go back to my digital media roots and make a website for a new project: <b>Scryfall Random* Sketch Commander.</b> I'll get to the asterik in a later post.</p>
+                    <p>On Feburary 26, 2025, I decided to get back into drawing by spending at least 10 minutes sketching something. I chose to use <a href="scryfall.com" target="_blank" title="scryfall.com">scryfall.com</a>, a search engine for Magic: the Gathering cards, to find inspiration. They have a feature where you can pull up a random card from their database. The first few days were creatures, so I decided to just do creature cards that came up.</p> 
+                    <p>After 30 days, I increased the amount of time drawing to 20 minutes. As I got closer to day 60, I decided that I wanted to create a commander deck.</p>
+                    <p>Days 61-67 were non-random cards I chose to be added to make the deck work more cohesively with the only WUBRG commander option, Sliver Hivelord, as I only had one sliver in the deck.</p>
+                    <p>For Days 68+ I will randomize ramp cards (-creature) for a certain amount of time. I don't know how many of these I will do, as other categories could cross-over, but I think I will end up making cuts for these categories anyways.</p>
+                    <p>You can see my progress on <a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social" title="sorocoroto.bsky.social">my bluesky account</a>.</p>
                 </div>
                 <div class="card">
-                    <h2>TITLE HEADING</h2>
+                    <h2>DAILY SKETCH POST: DAY#</h2>
+                    <h5>Card Name (Edition Shorthand), Dec 7, 2017</h5>
+                    <h6>Original Art by [Original Artist's Name]</h6>
+                    <div class="fakeimg" style="height:200px;">Sketch Image</div>
+                    <p>This is where I would talk about the card and/or anything else interesting to say about the day. It would also contain a link to the bluesky post.</p>
+                </div>
+                <div class="card">
+                    <h2>NON SKETCH POST</h2>
                     <h5>Title description, Sep 2, 2017</h5>
                     <div class="fakeimg" style="height:200px;">Image</div>
                     <p>Some text..</p>
@@ -35,9 +56,14 @@
             </div>
             <div class="rightcolumn">
                 <div class="card">
+                    <h3>Current Progress:</h3>
+                    <li>68 Sketches</li>
+                    <li>Clip Studio Paint Drawings 2/100</li>
+                </div>
+                <div class="card">
                     <h2>About Me</h2>
                     <div class="fakeimg" style="height:100px;">Image</div>
-                    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+                    <p>My name is Steve. I am a programmer who has studied electrical engineering and likes magic the gathering. I also draw and play piano.</p>
                 </div>
                 <div class="card">
                     <h3>Other Posts</h3>
@@ -46,14 +72,14 @@
                     <div class="fakeimg">Image</div>
                 </div>
                 <div class="card followme">
-                    <h3>Follow Me</h3>
+                    <h3>Follow Me On</h3>
                     <a href="https://bsky.app/profile/sorocoroto.bsky.social" target="_blank" title="Bluesky Profile Link"><img class="socialimglink" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Bluesky_Logo.svg" alt="bluesky link" style="width:20px;height:20px;">Bluesky</a>
                     <a href="https://moxfield.com/users/sorocoroto" target="blank" title="Moxfield Profile Link"><img class="socialimglink" src="https://assets.moxfield.net/assets/images/empty-profile.png" alt="moxfield link" style="width:20px;height:20px;">Moxfield</a>
                 </div>
             </div>
         </div>
         <div class="footer">
-            <p>Last Updated:</p>
+            <p>Last Updated: May 16, 2025 7:19 PM</p>
         </div>
     </body>
 </html>
