avatar and sizing

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="card">
                     <h2>About Me</h2>
-                    <div class="fakeimg" style="height:100px;">Image</div>
+                    <img class="avatar" src="img/avatar_01.jpg" alt="Avatar">
                     <p>My name is Steve. I am a programmer who has studied electrical engineering and likes magic the gathering. I also draw and play piano.</p>
                 </div>
                 <div class="card">
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="footer">
-            <p>Last Updated: May 16, 2025 7:19 PM</p>
+            <p>Last Updated: May 7, 2025 11:26 AM EST</p>
         </div>
     </body>
 </html>
