adjusting site for live
remove template posts and updated progress

--- a/index.html
+++ b/index.html
@@ -20,16 +20,13 @@
         <div class="row">
             <div class="scrollnav">
                 <a class="currentpage" title="Main">Main</a>
-                <a class="navbutton" href="#" title="The Cards">The Cards</a>
-                <a class="navbutton" href="#" title="All Posts">All Posts</a>
+                <a class="navbutton" href="#" title="The Cards - Coming Soon -">The Cards</a>
+                <a class="navbutton" href="#" title="All Posts - Coming Soon -">All Posts</a>
                 <a class="navbutton" href="https://moxfield.com/decks/_qrcU7pkgE6lhgQCRw5YHg" target="blank" title="Moxfield List">Moxfield List</a>
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">                
-                <div class="card post">
-                    <a href="posts/testpost.md">Test Post</a>
-                </div>
+            <div class="leftcolumn">
                 <div class="card post">
                     <h2>AN INTRODUCTORY POST</h2>
                     <h5>A "short "introduction, May 6, 2025</h5>
@@ -40,36 +37,25 @@
                     <p>For Days 68+ I will randomize ramp cards (-creature) for a certain amount of time. I don't know how many of these I will do, as other categories could cross-over, but I think I will end up making cuts for these categories anyways.</p>
                     <p>You can see my progress on <a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social" title="sorocoroto.bsky.social">my bluesky account</a>.</p>
                 </div>
-                <div class="card">
-                    <h2>DAILY SKETCH POST: DAY#</h2>
-                    <h5>Card Name (Edition Shorthand), Dec 7, 2017</h5>
-                    <h6>Original Art by [Original Artist's Name]</h6>
-                    <div class="fakeimg" style="height:200px;">Sketch Image</div>
-                    <p>This is where I would talk about the card and/or anything else interesting to say about the day. It would also contain a link to the bluesky post.</p>
-                </div>
-                <div class="card">
-                    <h2>NON SKETCH POST</h2>
-                    <h5>Title description, Sep 2, 2017</h5>
-                    <div class="fakeimg" style="height:200px;">Image</div>
-                    <p>Some text..</p>
-                </div>
             </div>
             <div class="rightcolumn">
                 <div class="card">
-                    <h3>Current Progress:</h3>
-                    <li>68 Sketches</li>
-                    <li>Clip Studio Paint Drawings 2/100</li>
+                    <table class="sideprogress">
+                        <th colspan="2">Current Progress:</th>
+                        <tr>
+                            <td>Sketches</td>
+                            <td>68</td>
+                        </tr>
+                        <tr>
+                            <td>Clip Studio Paint Drawings</td>
+                            <td>2</td>
+                        </tr>
+                    </table>
                 </div>
                 <div class="card">
                     <h2>About Me</h2>
                     <img class="avatar" src="img/avatar_01.jpg" alt="Avatar">
                     <p>My name is Steve. I am a programmer who has studied electrical engineering and likes magic the gathering. I also draw and play piano.</p>
-                </div>
-                <div class="card">
-                    <h3>Other Posts</h3>
-                    <div class="fakeimg">Image</div><br>
-                    <div class="fakeimg">Image</div><br>
-                    <div class="fakeimg">Image</div>
                 </div>
                 <div class="card followme">
                     <h3>Follow Me On</h3>
