about me updated

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <h2>About Me</h2>
                     <img class="avatar" src="img/avatar_01.jpg" alt="Avatar">
-                    <p>My name is Steve. I am a programmer who has studied electrical engineering and likes magic the gathering. I also draw and play piano.</p>
+                    <p>My name is Steve. I am a programmer who has studied electrical engineering and likes magic the gathering.</p>
                 </div>
                 <div class="card followme">
                     <h3>Follow Me On</h3>
