--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="scrollnav">
                 <a class="currentpage" title="Main">Main</a>
                 <a class="navbutton" href="#" title="The Cards - Coming Soon -">The Cards</a>
-                <a class="navbutton" href="#" title="All Posts - Coming Soon -">All Posts</a>
+                <a class="navbutton" href="posts/_allposts.html" title="All Posts - Coming Soon -">All Posts</a>
                 <a class="navbutton" href="https://moxfield.com/decks/_qrcU7pkgE6lhgQCRw5YHg" target="blank" title="Moxfield List">Moxfield List</a>
             </div>
         </div>
