Day 70 and Style Changes
Added Drop Shadows, Added a Scroll for the Posts, a button to get to most posts after scrolled down, added Day 70 post/md

--- a/index.html
+++ b/index.html
@@ -9,34 +9,47 @@
     </head>
     <body onload="onPageLoad()">    
         <div class="header">
-            <h2>Scryfall Random* Sketch Commander Project</h2>
-        </div>        
-        <div class="row">
-            <div class="cardprogress prevent-text-select">
-                <div id="divCurrentFullCardProgressBar" class="cardprogressbar"></div>
-                <div id="divCurrentFullCardProgressText" class="cardprogresstext" >Current Full Card Progress: 2%</div>
+            <h2>Scryfall Random* Sketch Commander Project</h2>                    
+            <div class="row">
+                <div class="cardprogress prevent-text-select">
+                    <div id="divCurrentFullCardProgressBar" class="cardprogressbar"></div>
+                    <div id="divCurrentFullCardProgressText" class="cardprogresstext" >Current Full Card Progress: 2%</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="scrollnav">
+                    <a class="currentpage" title="Main">Main</a>
+                    <a class="navbutton" href="#" title="The Cards - Coming Soon -">The Cards</a>
+                    <a class="navbutton" href="posts/allposts.html" title="All Posts">All Posts</a>
+                    <a class="navbutton" href="https://moxfield.com/decks/_qrcU7pkgE6lhgQCRw5YHg" target="blank" title="Moxfield List">Moxfield List</a>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="scrollnav">
-                <a class="currentpage" title="Main">Main</a>
-                <a class="navbutton" href="#" title="The Cards - Coming Soon -">The Cards</a>
-                <a class="navbutton" href="posts/allposts.html" title="All Posts">All Posts</a>
-                <a class="navbutton" href="https://moxfield.com/decks/_qrcU7pkgE6lhgQCRw5YHg" target="blank" title="Moxfield List">Moxfield List</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="leftcolumn">
+            <div class="leftcolumn">                
+                <div class="card post">                    
+                    <h2>Day 70: Spelunking (LCI)</h2>
+                    <h5>Sketch Post, May 8, 2025</h5>           
+                    <h4>Sketch: May 7, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>Draw a card, ramp, and lands you control enter untapped? Wild. I am predicting a lot of tapped lands when I randomize the lands, so at least there's something that could offset that.</p>
+                    <img id="sketchDay70" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreig74ojapb6meyd7qleq7mw4yp5oip4u3jmtfnxith24q2uexflzwy@jpeg" height="200" alt="My sketch of Spelunking 30 minutes.">
+                    <h6>My sketch of Spelunking after 30 minutes.</h6>
+                    <br>   
+                    <img id="realDay70" class="sketchImage" src="https://cards.scryfall.io/large/front/d/3/d3be4257-2316-4a2e-b347-f71c0368a947.jpg?1699044491" height="200" alt="(Original Artist: Ernanda Souza)">
+                    <h6>(Original Artist: Ernanda Souza) <a href="https://scryfall.com/card/lci/213/spelunking" target="_blank" title="Spelunking">Scryfall Link</a></h6> 
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lop4resc2k24" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
                 <div class="card post">                    
                     <h2>Day 69: Wayfarer's Bauble (TDC)</h2>
                     <h5>Sketch Post, May 8, 2025</h5>           
                     <h4>Sketch: May 6, 2025</h4>
                     <p>Sketch Time: 30-minutes</p>
-                    <p>I remember a time when this card spiked to like $3. I'm glad to get it for this deck to help with fixing.</p>                
+                    <p>I remember a time when this card spiked to like $3. I'm glad to get it for this deck to help with fixing.</p>
                     <img id="sketchDay69" class="sketchImage" src="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibba373fnh2snomyli74xohd6nv52nirplkotriubecrya2pzipeu@jpeg" height="200" alt="My sketch of Wayfarer's Bauble after 30 minutes.">
                     <h6>My sketch of Wayfarer's Bauble after 30 minutes.</h6>
                     <br>   
-                    <img id="sketchDay69" class="sketchImage" src="https://cards.scryfall.io/large/front/a/c/ac1960a1-9141-468c-b96c-6c8e6905084d.jpg?1743207408" height="200" alt="(Original Artist: Tomas Duchek)">
+                    <img id="realDay69" class="sketchImage" src="https://cards.scryfall.io/large/front/a/c/ac1960a1-9141-468c-b96c-6c8e6905084d.jpg?1743207408" height="200" alt="(Original Artist: Tomas Duchek)">
                     <h6>(Original Artist: Tomas Duchek) <a href="https://scryfall.com/card/tdc/335/wayfarers-bauble" target="_blank" title="Wayfarer's Bauble">Scryfall Link</a></h6> 
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lon2zhu5t226" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
@@ -49,6 +62,9 @@
                     <p>Days 61-67 were non-random cards I chose to be added to make the deck work more cohesively with the only WUBRG commander option, Sliver Hivelord, as I only had one sliver in the deck.</p>
                     <p>For Days 68+ I will randomize ramp cards (-creature) for a certain amount of time. I don't know how many of these I will do, as other categories could cross-over, but I think I will end up making cuts for these categories anyways.</p>
                     <p>You can see my progress on <a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social" title="sorocoroto.bsky.social">my bluesky account</a>.</p>
+                </div>
+                <div class="card post moreposts">
+                    <a href="posts/allposts.html">More Posts &#8594; </a>
                 </div>
             </div>
             <div class="rightcolumn">
