--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">   
+            <div class="leftcolumn">  
+                <div class="card post">
+                    <h2>Day 71: Lost Jitte (BIG)</h2>
+                    <h5>Sketch Post, May 9, 2025</h5>
+                    <h4>Sketch: May 8, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>Technically ramp I guess. The wiki says it might be <a href="https://scryfall.com/card/bok/163/umezawas-jitte" target="_blank">Umezawa's Jitte</a>, so the Vorthos in me wants to include it in the final cut. Hopefully I get more "put lands into play" ramp soon.</p>
+                    <img id="sketchDay71" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigt6lxat3d7cbtcinoxd7ujligdw4ssq232eymcxnzqg2cykcpcmq@jpeg" height="200" alt="My sketch of Lost Jitte after 30 minutes.">
+                    <h6>My sketch of Lost Jitte after 30 minutes.</h6>
+                    <br>
+                    <img id="realDay71" class="sketchImage" src="https://cards.scryfall.io/large/front/d/c/dc679a0e-bf7b-40b5-b904-9c2d3508fa83.jpg?1712353185" height="200" alt="(Original Artist: Maxime Minard)"></img>
+                    <h6>(Original Artist: Maxime Minard) <a href="https://scryfall.com/card/big/53/lost-jitte" target="_blank" title="Lost Jitte">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3loru63cnws26" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div> 
                 <div class="card post">                    
                     <h2>Day 70: Spelunking (LCI)</h2>
                     <h5>Sketch Post, May 8, 2025</h5>           
