Day 72 Sketch Post

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="js/script.js"></script>
         <title>Scryfall Random Sketch Commander Project</title>
     </head>
-    <body onload="onPageLoad()">    
+    <body onload="onPageLoad()">
         <div class="header">
             <h2>Scryfall Random* Sketch Commander Project</h2>                    
             <div class="row">
@@ -27,6 +27,19 @@
         </div>
         <div class="row">
             <div class="leftcolumn">  
+                <div class="card post">
+                    <h2>Day 72: Diamond Pick-Axe (LCI)</h2>
+                    <h5>Sketch Post, May 10, 2025</h5>
+                    <h4>Sketch: May 9, 2025</h4>
+                    <p>Sketch Time: 28-minutes</p>
+                    <p>Okay... two ramp equipment in a row that aren't <a href="https://scryfall.com/card/ori/240/sword-of-the-animist" target="_blank">Sword of the Animist</a>. Though, I am interested in figuring out how to convey the diamond texturing of the pick if It makes the final list.</p>
+                    <img id="sketchDay72" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidjs5h37kvx4bmqpixai6b4apzbizk6j7hsbxlzbldwypljrmgdva@jpeg" height="200" alt="My sketch of Diamond Pick-Axe after 28 minutes.">
+                    <h6>My sketch of Diamond Pick-Axe after 28 minutes.</h6>
+                    <br>
+                    <img id="realDay72" class="sketchImage" src="https://cards.scryfall.io/large/front/4/a/4ae30fa7-3d1d-417f-80d7-a668236cb2c1.jpg?1699044256" height="200" alt="(Original Artist: Dibujante Nocturno)"></img>
+                    <h6>(Original Artist: Dibujante Nocturno) <a href="https://scryfall.com/card/lci/143/diamond-pick-axe" target="_blank" title="Diamond Pick-Axe">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3louibnzv7s2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
                 <div class="card post">
                     <h2>Day 71: Lost Jitte (BIG)</h2>
                     <h5>Sketch Post, May 9, 2025</h5>
