--- a/html/page2.html
+++ b/html/page2.html
@@ -20,6 +20,7 @@
             <div class="row">
                 <div class="scrollnav">
                     <a class="currentpage" title="Main">Main</a>
+                    <a class="navbutton" href="../html/about.html" title="About the Project">About the Project</a>
                     <a class="navbutton" href="#" title="The Cards - Coming Soon -">The Cards</a>
                     <a class="navbutton" href="../posts/allposts.html" title="All Posts">All Posts</a>
                     <a class="navbutton" href="https://moxfield.com/decks/_qrcU7pkgE6lhgQCRw5YHg" target="blank" title="Moxfield List">Moxfield List</a>
