Page 3, Day 74, and Project Page Post

--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
         <div class="row">
             <div class="leftcolumn">  
                 <div class="card post">
+                    <h2>Day 74: Collective Voyage (C16)</h2>
+                    <h5>Sketch Post, May 12, 2025</h5>
+                    <h4>Sketch: May 11, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>Me Ramping? No, We Ramping, Comrade. Just don't forget who got you those basics when you get to untap with them before me.🤞</p>
+                    <img id="sketchDay74" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibkmw7kr6nnfokyoold2sa2c7nvqyoh4qq42inyykjngzbdwkyo6q@jpeg" height="200" alt="My sketch of Collective Voyage after 30 minutes.">
+                    <h6>My sketch of Collective Voyage after 30 minutes.</h6>
+                    <br>
+                    <img id="realDay74" class="sketchImage" src="https://cards.scryfall.io/large/front/3/f/3f2d44f0-c71e-4061-bb7c-1f91fbce8f51.jpg?1562396584" height="200" alt="(Original Artist: Charles Urbach)"></img>
+                    <h6>(Original Artist: Charles Urbach) <a href="https://scryfall.com/card/c16/145/collective-voyage" target="_blank" title="Collective Voyage">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lozimcm7hs2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Site Update!</h2>
+                    <h5>About the Project Page, May 12, 2025</h5>
+                    <p>I've added an <a href="https://stamayodesign.github.io/scryfall-random-sketch-commander/html/about.html">About the Project</a> page to the blog!</p>
+                    <p>I go over how I came up with the project (expanding on the introductory post), how I'm going about randoomizing category of cards, and what the * in the header is all about.</p>
+                    
+                </div>
+                <div class="card post">
                     <h2>Day 73: Vexing Puzzlebox (CLB)</h2>
                     <h5>Sketch Post, May 11, 2025</h5>
                     <h4>Sketch: May 10, 2025</h4>
@@ -55,19 +75,6 @@
                     <h6>(Original Artist: Dibujante Nocturno) <a href="https://scryfall.com/card/lci/143/diamond-pick-axe" target="_blank" title="Diamond Pick-Axe">Scryfall Link</a></h6>
                     <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3louibnzv7s2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
-                <div class="card post">
-                    <h2>Day 71: Lost Jitte (BIG)</h2>
-                    <h5>Sketch Post, May 9, 2025</h5>
-                    <h4>Sketch: May 8, 2025</h4>
-                    <p>Sketch Time: 30-minutes</p>
-                    <p>Technically ramp I guess. The wiki says it might be <a href="https://scryfall.com/card/bok/163/umezawas-jitte" target="_blank">Umezawa's Jitte</a>, so the Vorthos in me wants to include it in the final cut. Hopefully I get more "put lands into play" ramp soon.</p>
-                    <img id="sketchDay71" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigt6lxat3d7cbtcinoxd7ujligdw4ssq232eymcxnzqg2cykcpcmq@jpeg" height="200" alt="My sketch of Lost Jitte after 30 minutes.">
-                    <h6>My sketch of Lost Jitte after 30 minutes.</h6>
-                    <br>
-                    <img id="realDay71" class="sketchImage" src="https://cards.scryfall.io/large/front/d/c/dc679a0e-bf7b-40b5-b904-9c2d3508fa83.jpg?1712353185" height="200" alt="(Original Artist: Maxime Minard)"></img>
-                    <h6>(Original Artist: Maxime Minard) <a href="https://scryfall.com/card/big/53/lost-jitte" target="_blank" title="Lost Jitte">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3loru63cnws26" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div> 
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="posts/allposts.html">
                         <button>All Posts &#8594; </button>
